@@ -1,0 +1,7 @@
+// Same as printf_fast, but with floating point enabled
+
+#define FLOAT
+#define PRINTF_FAST printf_fast_f
+
+#include "printf_fast.c"
+
